--- a/grading.html
+++ b/grading.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parsentage</title>
+    <title>Grading</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -21,35 +21,27 @@
         </ul>
     </div>
     <div class="container">
-        <h3 class="py-3 text-success">Calculate Rejection Parsentage</h3>
+        <h3 class="py-3 text-success">Calculate Grading (cm)</h3>
         <form class="row">
             <div class="col-md-4">
-                <label class="form-label">Total Goods</label>
-                <input type="number" class="form-control" placeholder="Total" id="totalItems">
-            </div>
-            <div class="col-md-4">
-                <label class="form-label">Rejected Goods</label>
-                <input type="number" class="form-control" placeholder="Reject" id="numRejected">
+                <label class="form-label">Type Parsent</label>
+                <input type="number" class="form-control" placeholder="Parsent" id="Parsent">
             </div>
             <div class="col-md-4 pt-4">
-                <button class="btn btn-success w-100" id="button">Calculate</button>
+                <button class="btn btn-success w-100" id="buttonGrade">Calculate Grad</button>
             </div>
-            <div class="col-md-12 pt-4">
+            <div class="col-md-12  pt-4">
                 <div class="alert alert-primary" role="alert">
                     <h3 id="show">0</h3>
                 </div>
 
             </div>
         </form>
-
-        <div class="row">
-
-        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="./script/rejectParsent.js"></script>
+    <script src="./script/grading.js"></script>
 </body>
 
 </html>
