--- a/grading.html
+++ b/grading.html
@@ -13,7 +13,7 @@
     <div class="container pt-2">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Parsentage</a>
+                <a class="nav-link" aria-current="page" href="./index.html">Parsentage</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./grading.html">Grading</a>
