--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </li>
         </ul>
     </div>
-    <div class="container">
+    <div class="container mt-3 px-4 shadow rounded">
         <h3 class="py-3 text-success">Calculate Rejection Parsentage</h3>
         <form class="row">
             <div class="col-md-4">
@@ -41,10 +41,6 @@
 
             </div>
         </form>
-
-        <div class="row">
-
-        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
