--- a/grading.html
+++ b/grading.html
@@ -33,7 +33,7 @@
                 </select>
             </div>
             <div class="col-md-4 py-3 py-md-0">
-                <input type="number" class="form-control" placeholder="Dicliar-Cm" id="Dicliar-Cm">
+                <input type="number" class="form-control" placeholder="Dicliared-Cm" id="Dicliar-Cm">
             </div>
             <div class="col-md-4">
                 <button class="btn btn-success w-100" id="buttonGrade">Calculate Grad</button>
@@ -45,6 +45,9 @@
 
             </div>
         </form>
+    </div>
+    <div class="container pt-5 text-muted">
+        <p>Developed By <a target="_blank" href="https://www.facebook.com/Raselkibria11/">Md Rasel Kibria</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
