--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
                 <div class="alert alert-primary" role="alert">
                     <h3 id="show">0</h3>
                 </div>
-
             </div>
+
+            <p class="text-muted" id="history"></p>
         </form>
+    </div>
+
+    <div class="container pt-5 text-muted">
+        <p>Developed By <a target="_blank" href="https://www.facebook.com/Raselkibria11/">Md Rasel Kibria</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
